syntax = "proto3";

package cart;

option go_package = "/cart";

service CartService {
    rpc AddItem(AddItemReq) returns (AddItemResp) {}
    rpc GetCart(GetCartReq) returns (GetCartResp) {}
    rpc EmptyCart(EmptyCartReq) returns (EmptyCartResp) {}
}

message Item {
  uint32 product_id = 1;
  uint32  quantity = 2;
}

message Cart {
  uint32 user_id = 1;
  repeated Item items = 2;
}

message AddItemReq {
  uint32 user_id = 1;
  Item item = 2;
}

message AddItemResp {}

message GetCartReq {
  uint32 user_id = 1;
}

message GetCartResp {
  Cart cart = 1;
}

message EmptyCartReq {
  uint32 user_id = 1;
}

message EmptyCartResp {}